l5/parser.output
Grammar

    0 $accept: Program END

    1 Program: Ops END

    2 Ops: Ops Op
    3    | Op

    4 Op: CALCULATE ID Sum
    5   | ORATE Sum

    6 Sum: Sum PLUS Sub
    7    | Sub

    8 Sub: Sub MINUS Prod
    9    | Prod

   10 Prod: Prod MULT Quot
   11     | Quot

   12 Quot: Quot DIV Base
   13     | Base

   14 Base: INTLIT
   15     | LPAR Sum RPAR
   16     | ID


Terminals, with rules where they appear

    END (0) 0 1
    error (256)
    ID <strVal> (258) 4 16
    INTLIT <intVal> (259) 14
    LPAR (260) 15
    RPAR (261) 15
    PLUS (262) 6
    MINUS (263) 8
    DIV (264) 12
    MULT (265) 10
    ORATE (266) 5
    CALCULATE (267) 4


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    Program <intVal> (14)
        on left: 1
        on right: 0
    Ops <intVal> (15)
        on left: 2 3
        on right: 1 2
    Op <intVal> (16)
        on left: 4 5
        on right: 2 3
    Sum <intVal> (17)
        on left: 6 7
        on right: 4 5 6 15
    Sub <intVal> (18)
        on left: 8 9
        on right: 6 7 8
    Prod <intVal> (19)
        on left: 10 11
        on right: 8 9 10
    Quot <intVal> (20)
        on left: 12 13
        on right: 10 11 12
    Base <intVal> (21)
        on left: 14 15 16
        on right: 12 13


State 0

    0 $accept: • Program END

    ORATE      shift, and go to state 1
    CALCULATE  shift, and go to state 2

    Program  go to state 3
    Ops      go to state 4
    Op       go to state 5


State 1

    5 Op: ORATE • Sum

    ID      shift, and go to state 6
    INTLIT  shift, and go to state 7
    LPAR    shift, and go to state 8

    Sum   go to state 9
    Sub   go to state 10
    Prod  go to state 11
    Quot  go to state 12
    Base  go to state 13


State 2

    4 Op: CALCULATE • ID Sum

    ID  shift, and go to state 14


State 3

    0 $accept: Program • END

    END  shift, and go to state 15


State 4

    1 Program: Ops • END
    2 Ops: Ops • Op

    END        shift, and go to state 16
    ORATE      shift, and go to state 1
    CALCULATE  shift, and go to state 2

    Op  go to state 17


State 5

    3 Ops: Op •

    $default  reduce using rule 3 (Ops)


State 6

   16 Base: ID •

    $default  reduce using rule 16 (Base)


State 7

   14 Base: INTLIT •

    $default  reduce using rule 14 (Base)


State 8

   15 Base: LPAR • Sum RPAR

    ID      shift, and go to state 6
    INTLIT  shift, and go to state 7
    LPAR    shift, and go to state 8

    Sum   go to state 18
    Sub   go to state 10
    Prod  go to state 11
    Quot  go to state 12
    Base  go to state 13


State 9

    5 Op: ORATE Sum •
    6 Sum: Sum • PLUS Sub

    PLUS  shift, and go to state 19

    $default  reduce using rule 5 (Op)


State 10

    7 Sum: Sub •
    8 Sub: Sub • MINUS Prod

    MINUS  shift, and go to state 20

    $default  reduce using rule 7 (Sum)


State 11

    9 Sub: Prod •
   10 Prod: Prod • MULT Quot

    MULT  shift, and go to state 21

    $default  reduce using rule 9 (Sub)


State 12

   11 Prod: Quot •
   12 Quot: Quot • DIV Base

    DIV  shift, and go to state 22

    $default  reduce using rule 11 (Prod)


State 13

   13 Quot: Base •

    $default  reduce using rule 13 (Quot)


State 14

    4 Op: CALCULATE ID • Sum

    ID      shift, and go to state 6
    INTLIT  shift, and go to state 7
    LPAR    shift, and go to state 8

    Sum   go to state 23
    Sub   go to state 10
    Prod  go to state 11
    Quot  go to state 12
    Base  go to state 13


State 15

    0 $accept: Program END •

    $default  accept


State 16

    1 Program: Ops END •

    $default  reduce using rule 1 (Program)


State 17

    2 Ops: Ops Op •

    $default  reduce using rule 2 (Ops)


State 18

    6 Sum: Sum • PLUS Sub
   15 Base: LPAR Sum • RPAR

    RPAR  shift, and go to state 24
    PLUS  shift, and go to state 19


State 19

    6 Sum: Sum PLUS • Sub

    ID      shift, and go to state 6
    INTLIT  shift, and go to state 7
    LPAR    shift, and go to state 8

    Sub   go to state 25
    Prod  go to state 11
    Quot  go to state 12
    Base  go to state 13


State 20

    8 Sub: Sub MINUS • Prod

    ID      shift, and go to state 6
    INTLIT  shift, and go to state 7
    LPAR    shift, and go to state 8

    Prod  go to state 26
    Quot  go to state 12
    Base  go to state 13


State 21

   10 Prod: Prod MULT • Quot

    ID      shift, and go to state 6
    INTLIT  shift, and go to state 7
    LPAR    shift, and go to state 8

    Quot  go to state 27
    Base  go to state 13


State 22

   12 Quot: Quot DIV • Base

    ID      shift, and go to state 6
    INTLIT  shift, and go to state 7
    LPAR    shift, and go to state 8

    Base  go to state 28


State 23

    4 Op: CALCULATE ID Sum •
    6 Sum: Sum • PLUS Sub

    PLUS  shift, and go to state 19

    $default  reduce using rule 4 (Op)


State 24

   15 Base: LPAR Sum RPAR •

    $default  reduce using rule 15 (Base)


State 25

    6 Sum: Sum PLUS Sub •
    8 Sub: Sub • MINUS Prod

    MINUS  shift, and go to state 20

    $default  reduce using rule 6 (Sum)


State 26

    8 Sub: Sub MINUS Prod •
   10 Prod: Prod • MULT Quot

    MULT  shift, and go to state 21

    $default  reduce using rule 8 (Sub)


State 27

   10 Prod: Prod MULT Quot •
   12 Quot: Quot • DIV Base

    DIV  shift, and go to state 22

    $default  reduce using rule 10 (Prod)


State 28

   12 Quot: Quot DIV Base •

    $default  reduce using rule 12 (Quot)
